bugfix: cutting off the section below it.

--- a/sections/scroll-nav-fixed/style.less
+++ b/sections/scroll-nav-fixed/style.less
@@ -36,6 +36,7 @@
 .section-scroll-nav-fixed{
 	.snav-left-blueprint{
 		//width:100%;
+		position: fixed;
 		left:0;
 		top:70px;
 		ul.nav{
@@ -58,6 +59,7 @@
 	.snav-right-blueprint{
 		right:0;
 		top:70px;
+		position: fixed;
 		ul.nav{
 		}
 		li{}
